--- a/style.css
+++ b/style.css
@@ -7,21 +7,21 @@ html {
 
 body {
   font-family: 'Lato-Regular', sans-serif;
-  /* width: 100%; */
+  overflow-x: hidden;
 }
+
+.container {
+  width: 980px;
+  padding: 0 20px;
+  margin: 0 auto;
+}
+
 .slider,
 .services,
 .portfolio,
 .about-us,
 .contact { 
-  /* width: 100%; */
   scroll-margin-top: 89px;
-}
-/*RESPONSIVE*/
-.container {
-  width: 980px;
-  margin: 0 auto;
-  padding: 0 20px;
 }
 
 nav .container {
@@ -30,16 +30,6 @@ nav .container {
   padding: 0 20px;
 }
 
-/* .container { */
-  /* width: 980px;
-  margin: 0 auto;
-  padding: 0 20px; */
-    /* width: 100%;
-    max-width: 1020px;
-    margin: 0 auto;
-    padding-right: 40px;
-    padding-left: 40px; */
-/* } */
 /*RESPONSIVE*/
 
 /* 
@@ -54,7 +44,7 @@ test */
   padding-bottom: 10px;
   letter-spacing: -0.5px;
   position: relative;
-  margin-left: -5px;
+  /* margin-left: -5px; */
   padding-top: 10px;
 }
 
@@ -173,7 +163,7 @@ a {
 
 .header {
   background-color: #2d303a;
-  height: 95px;
+  height: 96px;
   border-bottom: 6px solid #323746;
   position: fixed;
   width: 100%;
@@ -266,8 +256,8 @@ a {
   min-height: 592px;
   background-color: #f06c64;
   border-bottom: 8px solid #ea676b;
-  padding-top: 96px;
-  padding-bottom: 51px;
+  padding-top: 6%;
+  padding-bottom: 8.5%;
 }
 
 
@@ -287,6 +277,8 @@ a {
 
 .slider__phone.active {
   display: flex;
+
+    height: 537.547px;
 }
 
 /*----------------------*/
@@ -349,7 +341,7 @@ display: block;
 }
 
 .second {
-  height: 542px;
+  /* height: 542px; */
   background-color:#648BF0;
   width: 100%;
 }
@@ -358,31 +350,45 @@ display: block;
   background-color:#648BF0;
 }
 
+.slider__phone--vertical img {
+  /* width: 240px;
+  height: 483px; */
+  width: 99%;
+  /* height: 99.824%; */
+  height: 108%;
+}
+
 .slider__phone--vertical {
-  padding-top: 54px;
-  padding-left: 72px;
-  padding-right: 72px;
-  padding-bottom: 2px;
+  padding-top: 9.5%;
+  padding-left: 8%;
+  padding-right: 8%;
+}
+
+.slider__phone--horizontal img {
+  /* width: 483px;
+  height: 240px; */
+  height: 74%;
+  width: 99%;
 }
 
 .slider__phone--horizontal {
-  padding-top: 176px;
-  padding-bottom: 123px;
-  padding-right: 36px;
+  padding-top: 22.5%;
 }
 
 .slider__btn-prev {
   background-image: url('./assets/img/prev.png');
   box-sizing: content-box;
-  width: 27px;
-  height: 27px;
+  width: 4%;
+  height: 5%;
   cursor: pointer;
   background-repeat: no-repeat;
   background-color: transparent;
   border: none;
   position: absolute;
-  top: 52%;
-  left: 0%;
+  /* top: 52%;
+  left: -1%; */
+    top: 59%;
+    left: 0;
   outline: none;
   z-index: 100;
 }
@@ -398,15 +404,15 @@ display: block;
 .slider__btn-next {
   background-image: url('./assets/img/next.png');
   box-sizing: content-box;
-  width: 27px;
-  height: 27px;
+  width: 4%;
+  height: 5%;
   cursor: pointer;
   background-repeat: no-repeat;
   background-color: transparent;
   background-position: 50% 50%;
   border: none;
   position: absolute;
-  top: 52%;
+  top: 59%;
   right: 0%;
   outline: none;
 }
@@ -421,20 +427,41 @@ display: block;
 
 /*off*/
 
+.vertical-off img {
+  /* width: 213px;
+  height: 457px; */
+  width: 99%;
+  height: 108%;
+}
+
 .vertical-off {
   position: absolute;
   display: none;
-  top: 53px;
-  left: 70px;
+  /* top: 53px;
+  left: 70px; */
+  padding-top: 9.5%;
+  padding-left: 8%;
+  padding-right: 8%;
   cursor: pointer;
 }
+
 .horizontal-off {
   position: absolute;
   display: none;
-  top: 174px;
-  right: 95px;
+  /* top: 174px;
+  right: 95px; */
+  padding-left: 42%;
+  padding-top: 23%;
   cursor: pointer;
 }
+
+.horizontal-off img {
+    /* height: 213px;
+    width: 457px; */
+  height: 74%;
+  width: 99%;
+}
+
 
 .services {
   padding-top: 60px;
@@ -459,7 +486,7 @@ display: block;
   text-align: justify;
   height: 60px;
   overflow: hidden;
-  margin-bottom: 46px;
+  margin-bottom: 50px;
 }
 
 .services__list {
@@ -475,7 +502,7 @@ display: block;
   /* max-width: 301px; */
   padding-left: 81px;
   height: 86px;
-  overflow: hidden;
+  /* overflow: hidden; */
 }
 
 .services__item::after {
@@ -557,7 +584,7 @@ display: block;
   font-size: 18px;
   font-family: "Lato-Light";
   line-height: 30px;
-  margin-bottom: 11px;
+  margin-bottom: 13px;
   text-align: justify;
 }
 
@@ -678,7 +705,7 @@ tag,
   background-color: #f2f2f2;
   /* height: 734px; */
   height: auto;
-  padding-top: 60px;
+  padding-top: 62px;
   padding-bottom: 35px;
   border-bottom: 6px solid #ffffff;
 }
@@ -1044,6 +1071,7 @@ input:focus:invalid {
 
 .footer__list {
   display: flex;
+  /* padding-right: 1%; */
 }
 
 .footer__item {
@@ -1152,6 +1180,26 @@ input:focus:invalid {
     width: 100%;
   }
 
+  .slider__phone--vertical img {
+    height: 100%;
+  }
+
+  .slider__phone--horizontal img {
+    height: 67%;
+    width: 99%;
+  }
+
+  .slider__phone--horizontal {
+    padding-top: 26.5%;
+    padding-right: 6%;
+  }
+
+  .slider__phone--vertical {
+    padding-top: 13%;
+    padding-left: 6.5%;
+    padding-right: 8%;
+}
+
   .logo__heading {
       margin-left: 0px;
   }
@@ -1171,24 +1219,41 @@ input:focus:invalid {
     min-height: 548px;
   }
 
+  .slider__btn-next {
+    height: 7%;
+  }
+
+  .slider__btn-prev {
+    height: 7%;
+  }
+
+  .vertical-off img {
+    height: 67%;
+    width: 99%;
+  }
+/* 
   .slider__phone--vertical {
     padding-top: 91px;
     padding-left: 64px;
     padding-right: 56px;
     padding-bottom: 28px;
-  }
+  } */
 
-  .slider__phone--horizontal {
+  /* .slider__phone--horizontal {
     padding-right: 62;
+  } */
+
+  .slider__phone.active {
+    height: auto;
   }
 
-  .services {
+  /* .services {
     padding-bottom: 18px;
     padding-top: 41px;
     min-height: 400px;
     padding-left: 20px;
     padding-right: 20px;
-  }
+  } */
 
   .services__heading-info {
     height: auto;
@@ -1219,7 +1284,7 @@ input:focus:invalid {
   }
 
   .services__item {
-    width: 48%;
+    width: 49%;
     margin-bottom: 57px;
   }
 
@@ -1285,15 +1350,50 @@ input:focus:invalid {
     text-align: justify;
   }
   .contact__text {
-    margin-bottom: 16px;
+    margin-bottom: 15px;
+    padding-left: 2px;
   }
 
   .contact__form {
     margin-right: 21px;
     margin-bottom: 36px;
+    width: 64%;
   }
-  
 
+  .contact__content {
+    width: 32%;
+  }
+
+  .vertical-off {
+
+    padding-top: 12.5%;
+    padding-left: 7%;
+    padding-right: 8%;
+    cursor: pointer;
+}
+  .vertical-off img {
+    height: 65%;
+    width: 75%;
+
+  }
+
+    .horizontal-off {
+    padding-left: 41%;
+    padding-top: 27%;
+  }
+
+  .horizontal-off img {
+    height: 72%;
+    width: 84%;
+}
+.services {
+    padding-top: 39px;
+    padding-bottom: 20px;
+}
+
+/* .portfolio {
+    padding-top: 20px;
+} */
 
 
 }
@@ -1302,6 +1402,33 @@ input:focus:invalid {
 
 /*media-mobile -burger*/ 
 @media (max-width: 767px) {
+
+/* .slider, 
+  .services, 
+  .about-us, 
+  .contact {
+    padding: 0px;
+} */
+
+nav.container {
+    width: 100%;
+  
+}
+
+.slider, .services, .about-us, .contact {
+    padding: 0 0px;
+}
+
+  .container {
+    padding: 0 32px;
+}
+  
+
+  .logo__link {
+    padding-left: 0px;
+    font-size: 19.6875px;
+    line-height: 24px;
+}
 
   .modal-content {
     font-size: 11px;
@@ -1316,9 +1443,6 @@ input:focus:invalid {
     text-align: center;
   }
 
-  .logo__heading {
-    padding-bottom: 0;
-  }
 
   .preview-item {
     flex: 1 0 35%;
@@ -1334,6 +1458,7 @@ input:focus:invalid {
 
   .employee__content {
     width: 100%;
+    padding-bottom: 29px;
   }
 
   .button_send {
@@ -1381,11 +1506,11 @@ input:focus:invalid {
     letter-spacing: -0.035em;
   }
   
-  .container {
+  /* .container {
     margin: 0 auto;
     width: auto;
-    padding: 0 20px;
-  }
+    padding: 0 32px;
+  } */
 
   .header {
     background: #242424;
@@ -1482,9 +1607,14 @@ input:focus:invalid {
 
   .logo__heading {
     padding-bottom: 0;
-    padding-top: 24px;
+    padding-top: 20px;
+    letter-spacing: -0.03em;
   }
+  .star {
+    font-size: 19.6875px;
+    bottom: 0px;
 
+}
 
     .preview-item {
     flex: 1 0 35%;
@@ -1511,8 +1641,141 @@ input:focus:invalid {
     padding-bottom: 0;
   }
 
-  .slider__phone--vertical {
-    padding-top: 108px;
-    padding-bottom: 65px;
+  .slider__btn-prev {
+    height: 13%;
+    width: 9%;
+    top: 55%;
+    left: -5%;
+}
+.slider__btn-next {
+    height: 13%;
+    width: 9%;
+        top: 55%;
+    right: -5%;
+}
+  .slider__phone--vertical img {
+    width: 97%;
+    height: 100%;
+}
+.slider__phone--horizontal {
+    padding-top: 30.5%;
+    padding-right: 2%;
+}
+
+.slider__phone--horizontal img {
+    height: 67%;
+    width: 99%;
+}
+
+  .slider {
+    min-height: auto;
+    padding-bottom: 4%;
+        padding-top: 11%;
   }
+
+  .slider__phone--vertical {
+    padding-top: 15%;
+    padding-left: 3%;
+  padding-right: 8%;
+  }
+
+  .services {
+    padding-top: 7%;
+  }
+
+  .services__heading-info {
+    margin-bottom: 30px;
+  }
+
+  .services__item {
+    margin-bottom: 33px;
+  }
+
+
+    .portfolio {
+    padding-top: 12%;
+    padding-left: 0px;
+  }
+  .portfolio__description {
+    margin-bottom: 16px;
+  }
+
+  .tag {
+    padding-right: 5.5px;
+}
+  li.preview-item:nth-child(n+9) {
+    display: none;
+  }
+
+    li.preview-item:nth-child(2n+2) {
+    margin-right: 0px;
+  }
+
+.preview-item {
+    /* height: auto; */
+      height: 89%;
+      margin-top: 0px;
+  margin-right: 10px;
+  margin-bottom: 10px;
+  margin-left: 0px;
+  }
+.layout-4-column {
+    margin-top: 27px;
+  margin-bottom: 28px;
+}
+
+.preview__img {
+  height: 89%;
+}
+
+.preview-item::before {
+    padding-top: 66%;
+}
+
+.about-us {
+  padding-top: 33px;
+}
+
+.about-us__text {
+    margin-bottom: 24px;
+}
+
+.employee__person1, .employee__person2, .employee__person3 {
+    margin-bottom: 20px;
+}
+
+.about-us .layout-3-column {
+  margin-bottom: 10px;
+}   
+.contact__heading {
+    padding-top: 51px;
+
+}
+
+.contact__description {
+    margin-bottom: 20px;
+}
+.contact__form {
+
+    margin-bottom: 33px;
+}
+
+.contact__info {
+    line-height: 23px;
+}
+
+.contact {
+  padding-bottom: 36px;
+}
+
+.footer__copyright {
+  display: none;
+}
+
+.footer__list {
+    padding-left: 53px;
+}
+.mobile-logo {
+    display: block;
+}
 }
